fix: set fixed height to testimonial card section to prevent screenshaking on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,10 @@ h2  {
     width: 320px;
 }
 
+.testemonialcard {
+    height: 280px;
+}
+
 /* footer */
 
 #contact {
